--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
-.App {
-  text-align: center;
+.header {
+    width: 1440px;
+    height: 40px;
+    background-color: rgb(27, 27, 27);
+    margin-left: 50px;
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header > .logo {
+    margin-left: 120px;
+    padding-top: 5px;
+    color: white;
+    font-size: 18px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header-input {
+    width: 450px;
+    height: 30px;
+    background-color: rgb(44, 44, 44);
+    border: 1px solid rgb(44, 44, 44);
+    color: white;
+    padding-left: 10px;
+    margin-left: 250px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.sidebar {
+    width: 220px;
+    height: 960px;
+    background-color: rgb(27, 27, 27); 
+    margin-left: 50px;
+    margin-top: -18px;
 }
 
-.App-link {
-  color: #61dafb;
+.sidebar > .home {
+    padding-top: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sidebar > .home > p {
+    color: dimgrey;
+    text-align: center;
 }
+
+.home-two {
+    padding-top: 20px;
+}
+
+.home-two > p {
+    color: dimgrey;
+    text-align: center;
+}
+
+.container {
+    width: 1220px;
+    height: 0 auto;
+    background-color: rgb(27, 27, 27);
+    margin-left: 270px;
+    margin-top: -973px;
+    padding-top: 50px;
+}
+
+ul {
+    display: flex;
+    gap: 80px;
+    flex-wrap: wrap;
+    padding-top: -10px;
+}
+
+li p {
+    font-size: 12px;
+    color: white;
+}
+
+li {
+    list-style: none;
+}
+
+
+
